--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "version": "0.1.0-preview.1",
   "unity": "2019.3",
   "description": "Scene View shortcuts to bookmark view positions and states (layer visibility and locked state, shading mode, lighting, effects, grid visibility, etc).\nIncludes \n *Bookmarks\n *Camera sync\n *Cinemachine Virtual Cameras shorcuts.",
+  "author": {
+    "name": "Fred Moreau",
+    "email": "frederic.moreau@unity3d.com",
+    "url": "https://www.unity3d.com"
+  },
   "keywords": [
     "unity",
     "scene view"
-  ]
+  ],
+    "repository": {
+    "type": "git",
+    "url": "git@github.com:FredMoreau/SceneViewBookmarks.git"
+  }
 }
